--- a/students.yml
+++ b/students.yml
@@ -7,3 +7,9 @@
   email: example@example.com
   github: aluno_teste
   GRR: 20161234
+- 
+  name: Ana Cristina Schneider
+  email: anacristinaschneider@gmail.com
+  github: anacristinascheneider
+  GRR: 12341234
+
