--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -3,7 +3,7 @@
   email: alexkutzke@gmail.com
   github: alexkutzke
 -
-  name: Aluno Teste
-  email: example@example.com
-  github: aluno_teste
-  GRR: 20161234
+  name: Marcelo Toniolo Hey
+  email: marcelotoniolo.h@gmail.com
+  github: MarceloHey
+  GRR: 20163099
