--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -7,3 +7,8 @@
   email: marcelotoniolo.h@gmail.com
   github: MarceloHey
   GRR: 20163099
+  
+  name: Sara Terezinha Gomes Armstrong
+  email: stga06@gmail.com
+  github: stgarmstrong9
+  GRR: 20165319
