--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -7,3 +7,8 @@
   email: marcelotoniolo.h@gmail.com
   github: MarceloHey
   GRR: 20163099
+-
+  name: Gabriel Vieira De Queiroz
+  email: gvieirabriel@gmail.com
+  github: Gvieirabriel
+  GRR: 20163140
