--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -7,3 +7,8 @@
   email: marcelotoniolo.h@gmail.com
   github: MarceloHey
   GRR: 20163099
+-
+  name: Elias Dal Ben Arruda
+  email: eliasdarruda@gmail.com
+  github: eliasdarruda
+  GRR: 20163120
