--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -27,3 +27,9 @@
   email: gvieirabriel@gmail.com
   github: Gvieirabriel
   GRR: 20163140
+  -
+  name: André Vinícios de Miranda Morgerot
+  email: andre.mm10@hotmail.com
+  github: AndreVMM
+  GRR: 20150519
+
