--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -27,3 +27,8 @@
   email: gvieirabriel@gmail.com
   github: Gvieirabriel
   GRR: 20163140
+-
+  name: Paulo Giovanni Rupp da Luz
+  email: paulo.rupp198@gmail.com
+  github: paulogrupp
+  GRR: 20163159
