--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -37,3 +37,8 @@
   email: paulo.rupp198@gmail.com
   github: paulogrupp
   GRR: 20163159
+-
+  name: Luana Gomide Bento
+  email: luh.gb.luana@gmail.com
+  github: luanagb
+  GRR: 20167547
