--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -37,3 +37,9 @@
   email: paulo.rupp198@gmail.com
   github: paulogrupp
   GRR: 20163159
+ -
+  name: Jian Leopoldo Farage Rodrigues
+  email: jian.leopoldo@gmail.com
+  github: jian-leopoldo
+  GRR: 20168183
+  -
