--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -7,3 +7,8 @@
   email: marcelotoniolo.h@gmail.com
   github: MarceloHey
   GRR: 20163099
+  -
+  name: Bruno Alves de Souza
+  email: souzalves50@gmail.com
+  github: brun0alves
+  GRR: 20163109
