--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -52,3 +52,8 @@
   email: lucas.a.c.gehlen@gmail.com
   github: lucasgehlen
   GRR: 20163137
+-
+  name: Allana de Almeida Flausino
+  email: allana.a.flausino@gmail.com
+  github: allanaflausino
+  GRR: 20164542
