--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -52,3 +52,8 @@
   email: lucas.a.c.gehlen@gmail.com
   github: lucasgehlen
   GRR: 20163137
+  -
+  name: Bruno Leandro Diniz
+  email: safadocket@gmail.com
+  github: brunopocket
+  GRR: 20166716
