--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -1,3 +1,4 @@
+
 - 
   name: Alexander Robert Kutzke
   email: alexkutzke@gmail.com
@@ -67,3 +68,8 @@
   email: safadocket@gmail.com
   github: brunopocket
   GRR: 20166716
+-
+  nome: Milena de Araújo Santos Ribeiro de Carvalho
+  email: milenariba04@gmail.com
+  github: masrc
+  GRR: 20163092
