--- a/students-noite.yml
+++ b/students-noite.yml
@@ -3,7 +3,7 @@
   email: alexkutzke@gmail.com
   github: alexkutzke
 -
-  name: Aluno Teste
-  email: example@example.com
-  github: aluno_teste
-  GRR: 20161234
+  name: Claudio Arthur Kruger Junior
+  email: raparthur@gmail.com
+  github: raparthur
+  GRR: 20151269
