--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -73,3 +73,9 @@
   email: milenariba04@gmail.com
   github: masrc
   GRR: 20163092
+-
+  nome: João Henrique Feitosa da Silva Filho
+  email: joaohenriquefsf@gmail.com
+  github: joaohenriquefeitosa
+  GRR: 20165406
+  
