--- a/students-noite.yml
+++ b/students-noite.yml
@@ -3,7 +3,8 @@
   email: alexkutzke@gmail.com
   github: alexkutzke
 -
-  name: Aluno Teste
-  email: example@example.com
-  github: aluno_teste
-  GRR: 20161234
+  name: Luis Gustavo Saro Spotti
+  email: luisspottiflw@gmail.com
+  github: luisspotti
+  GRR: 20163132
+ -
