--- a/students-noite.yml
+++ b/students-noite.yml
@@ -8,3 +8,7 @@
   github: luisspotti
   GRR: 20163132
  -
+  name: Gabriel Pacheco Pinto
+  email: gabrielp.pinto@hotmail.com
+  github: pachecogabriel
+  GRR: 20148746
