--- a/students-tarde.yml
+++ b/students-tarde.yml
@@ -78,4 +78,8 @@
   email: joaohenriquefsf@gmail.com
   github: joaohenriquefeitosa
   GRR: 20165406
-  
+-
+  nome: Vinicius dos Santos Soares
+  email: viniciusdss@gmail.com
+  github: viniciusdss
+  GRR: 20165379
